se agrego el nombre e imagen de la muralla de medellin

--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
     <h2>El Gran Malecón es un espacio público abierto multipropósito de Barranquilla, Su primera etapa fue el paseo peatonal a la altura del centro de eventos, inaugurada el 17 de julio de 2017.</h2>
     <br>
     <h2>Para llegar, se puede ingresar desde distintos puntos de la ciudad. La primera opción es por la vía 40 con calle 79b, donde está ubicado el Centro de Eventos Puerta de Oro. La calle 78 te recibe con una galería de murales a cielo abierto y te lleva directamente hacia el mercado gastronómico Caimán del Río. El otro ingreso es por la calle 72.</h2>
+    <br>
+    <br>
+    <h2>Nombre: La muralla de medellin</h2>
+    <img src="https://tse2.mm.bing.net/th/id/OIP.HIIxqYuxyBYfswVBZoIDGwHaE8?r=0&rs=1&pid=ImgDetMain&o=7&rm=3" alt="murallamedellin">
 </body>
 </html>
