Se grego un nuevo nombre e imagen sobre el sitio turistico parque tayrona

--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@
     <h2>El eje cafetero es una de las zonas turísticas más visitadas de Colombia y etapa casi obligatoria de cualquier viaje al que se considera el país del café por excelencia.</h2>
     <br>
     <h2>Esta ubicada en los departamentos de Caldas, Risaralda y Quindío, además de las regiones del noroccidente de Tolima, el suroeste de Antioquia, y el norte y oriente del Valle del Cauca</h2>
+    <br>
+    <br>
+    <h2>Nombre: Parque Nacional Natural Tayrona</h2>
+    <img src="https://th.bing.com/th/id/R.d193ddf8d58d88fd67bd822f6e34b751?rik=zSxrgC0zBBTmSA&riu=http%3a%2f%2fnew-hls.s3.amazonaws.com%2fhls%2fdata%2f2250%2fwebsite%2fgeneral%2fbn%2fparque-tayrona-banner-1.jpg&ehk=yskuq3S%2f1c48TmCU1W3z6boQy3CsfJEDaDpV1tYKVdM%3d&risl=&pid=ImgRaw&r=0" alt="tayrona">
 </body>
 </html>
