Se agrego una breve descripcion y ubicacion sobre el parque tayron

--- a/index.html
+++ b/index.html
@@ -34,5 +34,9 @@
     <br>
     <h2>Nombre: Parque Nacional Natural Tayrona</h2>
     <img src="https://th.bing.com/th/id/R.d193ddf8d58d88fd67bd822f6e34b751?rik=zSxrgC0zBBTmSA&riu=http%3a%2f%2fnew-hls.s3.amazonaws.com%2fhls%2fdata%2f2250%2fwebsite%2fgeneral%2fbn%2fparque-tayrona-banner-1.jpg&ehk=yskuq3S%2f1c48TmCU1W3z6boQy3CsfJEDaDpV1tYKVdM%3d&risl=&pid=ImgRaw&r=0" alt="tayrona">
+    <br>
+    <h2>El Parque Nacional Natural Tayrona es una reserva natural que combina playas caribeñas, selva tropical y montañas, hogar de gran biodiversidad y herencia indígena.</h2>
+    <br>
+    <h2>Está ubicado en la costa norte de Colombia, en el departamento del Magdalena, cerca de Santa Marta.</h2>
 </body>
 </html>
