Se agrego 2 br y el nombre de otro sitio turistico

--- a/index.html
+++ b/index.html
@@ -38,5 +38,8 @@
     <h2>El Parque Nacional Natural Tayrona es una reserva natural que combina playas caribeñas, selva tropical y montañas, hogar de gran biodiversidad y herencia indígena.</h2>
     <br>
     <h2>Está ubicado en la costa norte de Colombia, en el departamento del Magdalena, cerca de Santa Marta.</h2>
+    <br>
+    <br>
+    <h2>Nombre: Cartagena de Indias</h2>
 </body>
 </html>
